levels/vize_l2_to_l3/tests/snapshots/extraction_snapshots__o1_spends_its_budget_and_later_group_members_miss.snap
---
source: crates/vize_l2_to_l3/tests/extraction_snapshots.rs
expression: "decisions(ELEVEN_TITLES, OptTier::O1)"
---
[s3-placement-folio]

[s3-placement-folio.placements]
op=4 alternatives=inline,group leader=2 chosen=group
op=6 alternatives=inline,group leader=2 chosen=group
op=8 alternatives=inline,group leader=2 chosen=group
op=10 alternatives=inline,group leader=2 chosen=group
op=12 alternatives=inline,group leader=2 chosen=group
op=14 alternatives=inline,group leader=2 chosen=group
op=16 alternatives=inline,group leader=2 chosen=group
op=18 alternatives=inline,group leader=2 chosen=group
op=20 alternatives=inline,group leader=2 chosen=inline
op=22 alternatives=inline,group leader=2 chosen=inline

[s3-extraction-folio]
tier=O1
candidate_budget=8
budget_left=0
emitted_size_before=403
emitted_size_after=235
reactive_edges_before=11
reactive_edges_after=3
update_path_before=11
update_path_after=11

[s3-extraction-folio.decisions]
op=4 placement=group kind=applied reason=committed span=26:36 size=-21 edges=-1 path=0 budget=7
op=6 placement=group kind=applied reason=committed span=44:54 size=-21 edges=-1 path=0 budget=6
op=8 placement=group kind=applied reason=committed span=62:72 size=-21 edges=-1 path=0 budget=5
op=10 placement=group kind=applied reason=committed span=80:90 size=-21 edges=-1 path=0 budget=4
op=12 placement=group kind=applied reason=committed span=98:108 size=-21 edges=-1 path=0 budget=3
op=14 placement=group kind=applied reason=committed span=116:126 size=-21 edges=-1 path=0 budget=2
op=16 placement=group kind=applied reason=committed span=134:144 size=-21 edges=-1 path=0 budget=1
op=18 placement=group kind=applied reason=committed span=152:162 size=-21 edges=-1 path=0 budget=0
op=20 placement=group kind=missed reason=budget-exhausted span=170:180 size=0 edges=0 path=0 budget=0
op=22 placement=group kind=missed reason=not-contiguous span=188:198 size=0 edges=0 path=0 budget=0

[remarks]

[remarks.entries]
s3.extract-placements applied group @26:36 reason="committed" emitted-size=-21 reactive-edges=-1 update-path=0 budget-left=7
s3.extract-placements applied group @44:54 reason="committed" emitted-size=-21 reactive-edges=-1 update-path=0 budget-left=6
s3.extract-placements applied group @62:72 reason="committed" emitted-size=-21 reactive-edges=-1 update-path=0 budget-left=5
s3.extract-placements applied group @80:90 reason="committed" emitted-size=-21 reactive-edges=-1 update-path=0 budget-left=4
s3.extract-placements applied group @98:108 reason="committed" emitted-size=-21 reactive-edges=-1 update-path=0 budget-left=3
s3.extract-placements applied group @116:126 reason="committed" emitted-size=-21 reactive-edges=-1 update-path=0 budget-left=2
s3.extract-placements applied group @134:144 reason="committed" emitted-size=-21 reactive-edges=-1 update-path=0 budget-left=1
s3.extract-placements applied group @152:162 reason="committed" emitted-size=-21 reactive-edges=-1 update-path=0 budget-left=0
s3.extract-placements missed group @170:180 reason="budget-exhausted" emitted-size=0 reactive-edges=0 update-path=0 budget-left=0
s3.extract-placements missed group @188:198 reason="not-contiguous" emitted-size=0 reactive-edges=0 update-path=0 budget-left=0
